# ingest-for-rag

./: .env.sample  .gitignore  README.md  pyproject.toml
ingest_for_rag/: cli.py  crawl_docs.py  embeddings.py  formatter.py  ingest_git.py  storage.py  text_utils.py
tools/: clean_md.py
